Store Front/CorePackage/main/default/objects/Item__c/fields/DisplayURL__c.field-meta.xml
<CustomField>
    <fullName>DisplayURL__c</fullName>
    <label>DisplayURL</label>
    <type>Url</type>
</CustomField>