Store Front/CorePackage/main/default/objects/Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>1000</defaultValue>
    <label>Quantity</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>