Store Front/CorePackage/main/default/objects/Item__c/fields/Total_Sold__c.field-meta.xml
<CustomField>
    <fullName>Total_Sold__c</fullName>
    <label>Total Sold</label>
    <summaryForeignKey>Cart_Item__c.Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>