Store Front/CorePackage/main/default/objects/Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DisplayURL__c</columns>
    <columns>Item_Type__c</columns>
    <columns>Price__c</columns>
    <columns>Quantity__c</columns>
    <columns>Total_Sold__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>